--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,14 +1,5 @@
-<div class="three-column">
-  <%= image_tag("logo-dark.png", :id => "logo") %>
-  <p>Submit them</p>
-</div>
-
-<div class="three-column">
-  <%= image_tag("logo-dark.png", :id => "logo") %>
-  <p>Vote for them</p>
-</div>
-
-<div class="three-column">
-  <%= image_tag("logo-dark.png", :id => "logo") %>
-  <p>Learn from them</p>
-</div>
+<ul>
+  <% all_technologies.each do |technology| %>
+    <li class="side-bar-item"><%= link_to technology.name, technology %></li>
+  <% end %>
+</ul>
