--- a/app/views/tutorials/show.html.erb
+++ b/app/views/tutorials/show.html.erb
@@ -1,26 +1,37 @@
-<h2>
+<span class="category"><%= @tutorial.technology.name %></span>
+
+<h2 class="main-heading">
   <%= @tutorial.name %>
-  <span class="category"><%= @tutorial.technology.name %></span>
 </h2>
 
-<p><%= @tutorial.description %></p>
+<div class="clear"></div>
 
-<h3 class="subheading">Comments</h3>
+<p id="description"><%= @tutorial.description %></p>
+
+<h3 class="sub-heading">Comments</h3>
 
 <%= link_to "+ Add Comment", { :controller => :comments, :action => :new, :tutorial => @tutorial.id }, :class => "add" %>
 
 <div class="clear"></div>
 
 <% @comments.each do |comment| %>
+
   <div class="comment">
+
   	<h4 class="comment-title"><%= link_to comment.user.username, comment.user %></h4>
+
   	<span class="comment-timestamp"><%= comment.created_at %></span>
+
   	<div class="clear"></div>
+
   	<p><%= comment.body %></p>
+
   </div>
-<div class="clear"></div>
+
+  <div class="clear"></div>
+
 <% end %>
 
 <% if @comments.size == 0 %>
-  <span class="empty-placeholder"><%= "No comments submitted" %></span>
+  <span class="empty-placeholder">No comments submitted</span>
 <% end %>
