--- a/app/assets/stylesheets/tutorial.css.scss
+++ b/app/assets/stylesheets/tutorial.css.scss
@@ -1,6 +1,7 @@
 a.add-comment {
   float: right;
-  font-size: 20px;
+  font-size: 30px;
+  line-height: 40px;
   margin: 5px 0 0 0;
 }
 
@@ -33,9 +34,9 @@ h4.comment-title {
 }
 
 span.comment-timestamp {
-  color: #999;
+  color: #DDD;
   float: left;
-  font-size: 15px;
-  line-height: 15px;
+  line-height: 25px;
   text-align: right;
+  margin: 0 0 0 10px;
 }
