--- a/app/views/tutorials/new.html.erb
+++ b/app/views/tutorials/new.html.erb
@@ -1,15 +1,29 @@
-<h2>Add Tutorial for <%= @technology.name %></h2>
+<h2 id="add">Add Tutorial for <%= @technology.name %></h2>
 
-<%= form_tag({:controller => :tutorials, :action => "create"}, :method => "post", :class => "add-tutorial") do %>
-  
-  <%= text_field_tag "name", "", :class => "input-xxlarge", :placeholder => "Name" %>
-  <%= text_field_tag "link", "", :class => "input-xxlarge", :placeholder => "Link" %>
-  <%= text_area_tag "description", "", :class => "input-xxlarge", :placeholder => "Description", :rows => 5 %>
-  <%= hidden_field_tag "technology", params[:technology] %>
- 
-  <div class="form-actions input">
-  	<%= button_to "Submit Tutorial", {:controller => :tutorials, :action => :create}, :class => "btn btn-primary" %>
-    <%= button_to "Cancel", {:controller => :technologies, :action => :show, :id => params[:technology] }, :class => "btn", :method => :get %>
+<%= form_tag({:controller => :tutorials, :action => "create"}, :method => "post", :class => "form-horizontal") do %>
+  <div class="control-group">
+    <label class="control-label" for="name">Name</label>
+    <div class="controls">
+      <%= text_field_tag "name", "", :class => "input-xxlarge", :placeholder => "Name" %>
+    </div>
   </div>
-
+  <div class="control-group">
+    <label class="control-label" for="link">Password</label>
+    <div class="controls">
+      <%= text_field_tag "link", "", :class => "input-xxlarge", :placeholder => "Link" %>
+    </div>
+  </div>
+  <div class="control-group">
+    <label class="control-label" for="description">Description</label>
+    <div class="controls">
+      <%= text_area_tag "description", "", :class => "input-xxlarge", :placeholder => "Description", :rows => 5 %>
+    </div>
+  </div>
+  <%= hidden_field_tag "technology", params[:technology] %>
+  <div class="control-group">
+    <div class="form-actions input">
+      <%= button_to "Submit Tutorial", {:controller => :tutorials, :action => :create}, :class => "btn btn-primary" %>
+      <%= button_to "Cancel", {:controller => :technologies, :action => :show, :id => params[:technology] }, :class => "btn", :method => :get %>
+    </div>
+  </div>
 <% end %>
