--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,9 @@
-<h2>
-  <%= @user.username %>
-</h2>
+<h2 class="main-heading"><%= @user.username %></h2>
 
 <p><%= @user.bio %></p>
 
 <p>Registered at <%= @user.created_at %></p>
+
+<% if current_user.id == @user.id %>
+  <p><%= link_to "Change password", :edit_user_password, :method => :get %></p>
+<% end %>
