--- a/app/assets/stylesheets/tutorial.css.scss
+++ b/app/assets/stylesheets/tutorial.css.scss
@@ -1,29 +1,24 @@
 a.add-comment {
   float: right;
-  font-size: 30px;
-  line-height: 40px;
-  margin: 5px 0 0 0;
+  font-size: 20px;
+  line-height: 30px;
+  margin: 20px 0 0 0;
 }
 
 div.comment {
-  background: #f0f0f0;
+  background: #EEE;
+  box-shadow: 0 0 15px #777777;
   float: left;
   position: relative;
-  margin: 0 0 10px 10px;
+  margin: 10px 0;
   padding: 10px;
+  max-width: 100%;
+  overflow: hidden;
+  width: 100%;
 }
 
-div.comment:after {
-  content: "";
-  position: absolute;
-  top: 12px;
-  left: -10px;
-  border-style: solid;
-  border-width: 10px 10px 10px 0;
-  border-color: transparent #f0f0f0;
-  display: block;
-  width: 0;
-  z-index: 1;
+h3#comments-heading {
+  float: left;
 }
 
 h4.comment-title {
@@ -34,9 +29,10 @@ h4.comment-title {
 }
 
 span.comment-timestamp {
-  color: #DDD;
+  color: #BBB;
   float: left;
-  line-height: 25px;
+  font-size: 15px;
+  line-height: 20px;
   text-align: right;
-  margin: 0 0 0 10px;
+  margin: 0 5px;
 }
