--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,27 @@
-<div>
-  <p>Stuff to explain tuutorials</p><br />
-</div>
+<h3 class="sub-heading">The best technology tutorials, decided by you.</h3>
+<p class="home-paragraph">
+  tuutorials is a side-project of mine that really aims to make it easy to find great
+  technology tutorials and get on with learning cool new stuff. Finding the best resources for
+  learning something new sometimes requires a bit of time, so tuutorials puts them all
+  in one place, making your life a little bit more efficient.
+</p>
+
+<h3 class="sub-heading">Submit. Vote. Review. Learn.</h3>
+<p class="home-paragraph">
+  You can try out submitted tutorials right now! Check out the technology list
+  below to get things started. By
+  <%= link_to "signing up", :new_user_registration %> you can submit 
+  tutorials, vote for them and add reviews to the ones you have something to say about.
+</p>
+
+<h3 class="sub-heading">Something missing?</h3>
+<p class="home-paragraph">
+  Cool new technologies are always popping up, so I could really use your help keeping up.
+  If you spot something missing that you think should make the list send me an 
+  <%= mail_to "tuutorials@gmail.com", "email" %> and I'll add it as soon as I can.
+</p>
+
+<h2 id="technologies-heading">Technologies</h2>
 
 <div id="nav-container">
   <ul id="nav-list">
@@ -10,27 +31,36 @@
         <%= letter %>
       </li>
     <% end %>
-
     <li class="nav-item" onclick=$('#numbers').goTo();>0-9</li>
-
     <li class="nav-item" onclick=$('#symbols').goTo();>!?#</li>
-
+    
   </ul>
 </div>
 
 <ul id="technology-list">
 
+  <!-- Technologies that start with a letter -->
   <% ("A".."Z").each do |letter| %>
-    <h2 class="letter" id="<%= letter %>"><%= letter %></h2>
-      <% if !@groupedAlphabetically[letter].nil? %>
-        <% @groupedAlphabetically[letter].each do |technology| %>
-          <li class="technology-item"><%= link_to technology.name, technology %></li>
-        <% end %>
+    <h3 class="letter" id="<%= letter %>"><%= letter %></h3>
+    <% if !@groupedAlphabetically[letter].nil? %>
+      <% @groupedAlphabetically[letter].each do |technology| %>
+        <li class="technology-item"><%= link_to technology.name, technology %></li>
       <% end %>
+    <% end %>
   <% end %>
 
-  <h2 class="letter" id="numbers">0-9</h2>
+  <!-- Technologies that start with a number -->
+  <h3 class="letter" id="numbers">0-9</h3>
+  <% ("0".."9").each do |number| %>
+    <% if !@groupedAlphabetically[number].nil? %>
+      <% @groupedAlphabetically[number].each do |technology| %>
+        <li class="technology-item"><%= link_to technology.name, technology %></li>
+      <% end %>
+    <% end %>
+  <% end %>
 
-  <h2 class="letter" id="symbols">!?#</h2>
+  <!-- Technologies that start with a symbol -->
+  <h3 class="letter" id="symbols">!?#</h3>
+  <!-- TODO -->
 
 </ul>
