--- a/app/views/technologies/show.html.erb
+++ b/app/views/technologies/show.html.erb
@@ -34,8 +34,17 @@
       <div class="tutorial-wrapper" id="<%= tutorial.id %>">
 
         <div class="vote-wrapper">
-          <%= link_to "+", { :action => "new", :controller => "votes", :tutorial => tutorial.id, :vote => 1 }, :class => "up-vote" %> 
-          <%= link_to "-", { :action => "new", :controller => "votes", :tutorial => tutorial.id, :vote => 0 }, :class => "down-vote" %>
+          <% if user_signed_in? && tutorial.up_voted?(current_user) %>
+            <span class="voted">+</span>
+          <% else %>
+            <%= link_to "+", { :action => "create", :controller => "votes", :tutorial => tutorial.id, :vote => 1 }, :class => "up-vote", :method => :post %> 
+          <% end %>
+
+          <% if user_signed_in? && tutorial.down_voted?(current_user) %>
+            <span class="voted">-</span>
+          <% else %>
+            <%= link_to "-", { :action => "create", :controller => "votes", :tutorial => tutorial.id, :vote => 0 }, :class => "down-vote", :method => :post %>
+          <% end %>
         </div> 
         
         <div class="tutorial-info-wrapper">
@@ -47,7 +56,7 @@
             Submitted by 
             <span class="tutorial-info-item"><%= link_to tutorial.user.username, tutorial.user %> <%= time_ago_in_words tutorial.created_at %> ago</span>
             <span class="tutorial-info-item">-</span>
-            <% if user_signed_in? && tutorial.is_reported?(current_user)  %>
+            <% if user_signed_in? && tutorial.is_reported_by?(current_user)  %>
               <span class="tutorial-info-item"><%= link_to "Unreport", unreport_path(:reported_object => tutorial.id, :report_category => "Tutorial") %></span>
             <% else %>
               <span class="tutorial-info-item"><%= link_to "Report", { :action => "new", :controller => "reports", :reported_object => tutorial.id, :report_category => "Tutorial" } %></span>
