--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,17 +1,7 @@
 <h3 class="sub-heading">The best technology tutorials, decided by you.</h3>
 <p class="home-paragraph">
-  tuutorials is a side-project of mine that really aims to make it easy to find great
-  technology tutorials and get on with learning cool new stuff. Finding the best resources for
-  learning something new sometimes requires a bit of time, so tuutorials puts them all
-  in one place, making your life a little bit more efficient.
-</p>
-
-<h3 class="sub-heading">Submit. Vote. Review. Learn.</h3>
-<p class="home-paragraph">
-  You can try out submitted tutorials right now! Check out the technology list
-  below to get things started. By
-  <%= link_to "signing up", :new_user_registration %> you can submit 
-  tutorials, vote for them and add reviews to the ones you have something to say about.
+  tuutorials orders technology tutorials by their user rating to make finding
+  the best tutorials easy.
 </p>
 
 <h3 class="sub-heading">Something missing?</h3>
