--- a/app/views/tutorials/new.html.erb
+++ b/app/views/tutorials/new.html.erb
@@ -1,4 +1,4 @@
-<h2 id="add">Add Tutorial for <%= @technology.name %></h2>
+<h2 id="form-heading">Add Tutorial for <%= @technology.name %></h2>
 
 <%= form_tag({:controller => :tutorials, :action => "create"}, :method => "post", :class => "form-horizontal") do %>
   <div class="control-group">
