--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,7 +7,7 @@
 
 <% if current_user.id == @user.id %>
   <p><%= link_to "Edit Details", :edit_user_registration, :method => :get %></p>
-<% elsif user_signed_in? && @user.is_reported?(current_user)  %>
+<% elsif user_signed_in? && @user.is_reported_by?(current_user) %>
   <p><%= link_to "Unreport", unreport_path(:reported_object => @user.id, :report_category => "User") %></p>
 <% else %>
   <p><%= link_to "Report", { :action => "new", :controller => "reports", :reported_object => @user.id, :report_category => "User" } %></p>
