--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,27 +1,30 @@
-<h2 class="main-heading">Edit Account</h2>
+<h2 id="form-heading">Edit Account</h2>
 
 <%= simple_form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f| %>
   <%= devise_error_messages! %>
-
+  
   <div class="control-group"><%= f.label :email %>
   <%= f.email_field :email, :autofocus => true %></div>
   
   <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
     <div class="control-group">Currently waiting confirmation for: <%= resource.unconfirmed_email %>
   <% end %>
-
+  
   <div class="control-group"><%= f.label :password %>
   <%= f.password_field :password, :autocomplete => "off" %></div>
-
+  
   <div class="control-group"><%= f.label :password_confirmation %>
   <%= f.password_field :password_confirmation %></div>
-
+  
   <div class="control-group"><%= f.label :current_password %>
   <%= f.password_field :current_password %></div>
-
+  
   <div class="control-group">
-    <%= f.submit "Update" %><%= button_to "Cancel", :back %>
+    <div class="form-actions input">
+      <%= f.submit "Update", :class => "btn btn-primary" %>
+      <%= button_to "Cancel", current_user, :class => "btn" %>
+    </div>
   </div>
 <% end %>
 
-<p><%= link_to "Delete my account", registration_path(resource_name), :data => { :confirm => "Are you sure?" }, :method => :delete %></p>
+<div id="devise-links"><%= link_to "Delete my account", registration_path(resource_name), :data => { :confirm => "Are you sure?" }, :method => :delete %></div>
