--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,9 @@
     <%= stylesheet_link_tag "application", :media => "all" %>
 
     <%= javascript_include_tag "application" %>
+    <% if Rails.env.production? %>
+      <%= javascript_include_tag "google_analytics" %>
+    <% end %>
   
     <%= csrf_meta_tags %>
   </head>
