--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,10 +8,8 @@
     <%= stylesheet_link_tag "application", :media => "all" %>
 
     <%= javascript_include_tag "application" %>
-    <% if Rails.env.production? %>
-      <%= javascript_include_tag "google_analytics" %>
-    <% end %>
-  
+    <%= analytics_init if Rails.env.production? %>
+    
     <%= csrf_meta_tags %>
   </head>
 
