--- a/app/assets/stylesheets/technology.css.scss
+++ b/app/assets/stylesheets/technology.css.scss
@@ -69,3 +69,8 @@ p#technology-description {
 span.tutorial-info-item {
   margin: 5px 0px;
 }
+
+span.tutorial-link {
+  color: #BBB;
+  font-size: 20px;
+}
