--- a/app/views/technologies/show.html.erb
+++ b/app/views/technologies/show.html.erb
@@ -50,6 +50,7 @@
         <div class="tutorial-info-wrapper">
           <h3 class="tutorial-name">
             <%= link_to tutorial.name, tutorial.link %>
+            <span class="tutorial-link"><%= tutorial.link.split('/')[2] %></span>
           </h3>
                 
           <p class="tutorial-info">
