--- a/app/assets/stylesheets/technology.css.scss
+++ b/app/assets/stylesheets/technology.css.scss
@@ -38,7 +38,7 @@ div.vote-wrapper {
   display: inline-block;
   float: left;
   font-size: 60px;
-  font-weight: bold;
+  /*font-weight: bold;*/
   line-height: 60px;
   text-align: center;
   padding: 0 20px;
