--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -139,9 +139,12 @@ div#login {
   line-height: 60px;
 }
 
+h1, h2, h3, h4 {
+  font-weight: normal;
+}
+
 h2, h3, h4 {
   color: #888;
-  font-weight: normal;
 }
 
 h1 {
