--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -1,3 +1,11 @@
+#missing-technology {
+  display: block;
+  font-size: 30px;
+  text-align: center;
+  margin: 40px 0 0 0;
+  width: 100%;
+}
+
 div#technology-container {
   -moz-column-count: 4;
   -webkit-column-count: 4;
@@ -7,7 +15,7 @@ div#technology-container {
 h2#technologies-heading {
   font-size: 60px;
   line-height: 60px;
-  margin: 80px 0 40px 0;
+  margin: 40px 0;
   text-align: center;
 }
 
@@ -59,6 +67,7 @@ p.home-paragraph {
 
 ul#technology-list {
   margin: 0;
+  border-bottom: 3px solid #CCC;
 }
 
 ul#nav-list {
