--- a/app/assets/stylesheets/home.css.scss
+++ b/app/assets/stylesheets/home.css.scss
@@ -6,22 +6,16 @@
   width: 100%;
 }
 
-div#technology-container {
-  -moz-column-count: 4;
-  -webkit-column-count: 4;
-  column-count: 4;
-}
-
 h2#technologies-heading {
-  font-size: 60px;
-  line-height: 60px;
-  margin: 40px 0;
+  font-size: 80px;
+  line-height: 80px;
+  margin: 60px 0 20px 0;
   text-align: center;
 }
 
 h3.letter {
   font-size: 60px;
-  margin: 60px 0;
+  padding: 60px 0;
   text-align: center;
 }
 
@@ -45,16 +39,10 @@ li.technology-item {
 }
 
 li.nav-item {
-  cursor: pointer;
   display: inline-block;
-  font-size: 30px;
+  font-size: 40px;
   list-style: none;
-  margin: 3px;
-  -o-transition:color .2s ease-out, background 1s ease-in;
-  -ms-transition:color .2s ease-out, background 1s ease-in;
-  -moz-transition:color .2s ease-out, background 1s ease-in;
-  -webkit-transition:color .2s ease-out, background 1s ease-in;
-  transition:color .2s ease-out, background 1s ease-in;
+  margin: 15px 10px;
 }
 
 li.nav-item:hover {
