--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
     <div id="header">
       
       <h1>
-        <%= link_to "t.", :root %>
+        <%= link_to "tuutorials.", :root %>
       </h1>
 
       <div id="login" >
