--- a/app/views/tutorials/new.html.erb
+++ b/app/views/tutorials/new.html.erb
@@ -8,7 +8,7 @@
     </div>
   </div>
   <div class="control-group">
-    <label class="control-label" for="link">Password</label>
+    <label class="control-label" for="link">Link</label>
     <div class="controls">
       <%= text_field_tag "link", "", :class => "input-xxlarge", :placeholder => "Link" %>
     </div>
